--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,22 @@
   </head>
 
   <body>
+    <header>
+      <nav class="nav-bar">
+        <%= link_to 'Home', root_path %>
+        <%= link_to 'Users', users_path %>
+        <%= link_to 'Lib-like-mad', new_madlib_path %>
+      </nav>
+      <div class="errors">
+        <% if flash[:errors] %>
+            <ol>
+          <% flash[:errors].each do |error|%>
+              <li><%= error %></li>
+          <% end %>
+            </ol>
+        <% end %>
+      </div>
+    </header>
     <%= yield %>
   </body>
 </html>
