--- a/app/views/madlibs/show.html.erb
+++ b/app/views/madlibs/show.html.erb
@@ -4,4 +4,9 @@
 <%=@madlib.body%>
 </p>
 
-<%= button_to "Add To Your Favorites", new_favorite_path, params: { id: @madlib.id }%>
+<%unless is_favorite %>
+    <%= button_to "Add To Your Favorites", new_favorite_path, params: { id: @madlib.id }%>
+<%else %>
+    <%= button_to "Remove From Favorites", delete_favorite_path, params: { id: @madlib.id }%>
+
+<%end %>
