--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,13 @@
         <%= link_to 'Home', root_path %>
         <%= link_to 'Users', users_path %>
         <%= link_to 'Lib-like-mad', new_madlib_path %>
+        <%= link_to 'Cart', cart_path %>
+        <br>
+        <% if logged_in? %> 
+          Logged in as <%=current_user.user_name%> <%=button_to 'Logout', logout_path %> 
+        <%else%>
+            <%= button_to 'Login', login_path, method: :get %>
+        <%end%>
       </nav>
       <div class="errors">
         <% if flash[:errors] %>
