--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -6,8 +6,10 @@
   <%= f.label :last_name %>
   <%= f.text_field :last_name %><br>
   <%# user name %>
-  <%= f.label "Select a unique username" %>
-  <%= f.text_field :user_name %><br>
+  <% if !@user.user_name%>
+    <%= f.label "Select a unique username" %>
+    <%= f.text_field :user_name %><br>
+  <%end%>
   <%# password %>
   <%= f.label 'Enter your password' %>
   <%= f.password_field :password %><br>
