--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,3 @@
-User show page
 <h1>Welcome to <%= this_user? ? 'your' : "#{@user.to_name}'s" %> profile page, <%= current_user.first_name %>!</h1>
 <hr>
 
@@ -14,26 +13,31 @@ User show page
 <%end%>
 
 
-<h4><%= this_user? ? "Your" : "#{@user.first_name}'s" %> past orders: </h4>
-<%if @orders.empty? %>
-  <h5>No orders yet! Buy some stuff! </h5>
-<% else%>
-  <ol>
-  <% #@trinket_orders.each_with_index do |t_o, index| %>
-  <% @orders.each do |order| %>
-    <li><%= link_to order.created_at.strftime("Ordered on %m/%d/%Y") , order_path(order) %></li>
-      <ul>
-        <% order.trinkets.each do |trinket| %>
-        
-          <li><%= trinket.product_type%> with <%= trinket.madlib.title%> </li>
-        <%end%>
-      </ul>
-  <% end %>
-  </ol>
+<% if this_user?%>
+<h4> Your recent orders: </h4>
+  <%if @orders.empty? %>
+    <h5>No orders yet! Buy some stuff! </h5>
+  <% else%>
+    <ol>
+    <% #@trinket_orders.each_with_index do |t_o, index| %>
+    <% @orders.each do |order| %>
+      <li>#<%= link_to order.number , order_path(order) %></li>
+        <ul>
+          <% order.trinkets.each do |trinket| %>
+          
+            <li><%= trinket.product_type%> with <%= trinket.madlib.title%> </li>
+          <%end%>
+        </ul>
+    <% end %>
+    </ol>
+
+    <%= button_to "See All Orders", orders_path, method: :get%>
+
+  <%end%>
 <%end%>
 
-
+<br><br>
 
 <%= button_to "Logout", logout_path  unless !this_user? %><br>
-<%= button_to "Delete", {controller: :users, action: 'destroy', id: @user.id}, method: :delete unless !this_user?%><br>
+<%= button_to "Close Account", {controller: :users, action: 'destroy', id: @user.id}, method: :delete unless !this_user?%><br>
 <%= link_to "Edit Profile", edit_user_path unless !this_user?%>
