--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Madlibzzzz</title>
+    <title>MADLIB</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   </head>
 
   <body>
     <header>
-      <nav class="nav-bar">
-        <%= link_to 'Home', root_path %>
-        <%= link_to 'Users', users_path %>
-        <%= link_to 'Lib-like-mad', new_madlib_path %>
-        <%= link_to 'Cart', cart_path %>
-        <br>
-        <% if logged_in? %> 
-          Logged in as <%=current_user.user_name%> <%=button_to 'Logout', logout_path %> 
-        <%else%>
-            <%= button_to 'Login', login_path, method: :get %>
-        <%end%>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <%= link_to 'MADLIBZ', root_path, class: "nav-brand" %>
+        
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item"><%= link_to 'Home', root_path, class: "nav-link" %> </li>
+            <li class="nav-item"><%= link_to 'Profile', user_path(current_user), class: "nav-link" unless !logged_in? %></li>
+            <li class="nav-item"><%= link_to 'Create!', new_madlib_path, class: "nav-link" %></li>
+            <li class="nav-item"><%= link_to 'Cart', cart_path, class: "nav-link" %></li>
+            <% if logged_in? %> 
+              <li class="nav-item">Logged in as <%=current_user.user_name%> <%=button_to 'Logout', logout_path %> </li>
+            <%else%>
+              <li class="nav-item"> <%= button_to 'Login', login_path, method: :get %></li>
+            <%end%>
+          </ul>
+        </div>
       </nav>
+        
+
+
       <div class="errors">
         <% if flash[:errors] %>
           <% flash[:errors].each do |error|%>
