--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,8 @@ $etongreen: rgba(153, 209, 156, 1);
 $pearlaqua: rgba(121, 199, 197, 1);
 $powder: rgba(173, 225, 229, 1);
 
+
+
 header{
     display: flex;
     justify-content: space-around;
@@ -34,7 +36,7 @@ header{
 
 
 nav {
-    flex-basis: 80%;
+    flex-basis: 75%;
 }
 
 
@@ -43,12 +45,11 @@ nav {
     // container stuff
     display: flex;
     justify-content: space-around;
-    align-items: center;
     background-color:#f8f9fa;
-  
+    align-items: center;
 
     // item stuff
-    flex-basis: 20%;
+    flex-basis: 25%;
     
 }
 
@@ -58,13 +59,11 @@ nav {
 
 .user_control:first-child{
     flex-basis: 70%;
-    flex-grow: 1;
-    
+
 }
 
 .user_control > *{
     flex-basis: 30%;
-    flex-grow: 2;
     
 }
 
@@ -76,7 +75,9 @@ main{
     flex-direction: column;
     background-color: $etongreen;
     align-content: center;
-    justify-content: space-evenly
+ 
+    min-height: 100vh;
+    
 }
 
 
@@ -84,12 +85,57 @@ main{
 main>* {
 
     width: 70%;
-    background-color: rgba(239, 252, 251, 0.897); 
-    
-    
+    background-color: white; 
+    min-height: 100vh;
 }
 
 .login_form {
-    
+    border-color: black;
 };
 
+
+h1 {
+    font-family: 'Gloria Hallelujah', cursive;
+}
+
+h2 {
+    font-family: 'Reenie Beanie', cursive;
+}
+
+h3 {
+    font-family: 'Reenie Beanie', cursive;
+}
+h4 {
+    font-family: 'Reenie Beanie', cursive;
+}
+h5 {
+    font-family: 'Reenie Beanie', cursive;
+}
+
+li {
+    font-family: 'Schoolbell', cursive; 
+}
+
+button {
+    font-family: 'Schoolbell', cursive;
+}
+
+input {
+    font-family: 'Schoolbell', cursive;
+}
+label {
+    font-family: 'Schoolbell', cursive;
+}
+
+a {
+    font-family: 'Schoolbell', cursive;
+}
+
+
+span {
+    font-family: 'Schoolbell', cursive;
+}
+
+p {
+    font-family: 'Schoolbell', cursive;
+}
