--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Your Favorites!</h1>
+<h1>  Your Favorites! </h1>
 
 <ul>
 <% @favorites.each do |favorite|%>
     <% madlib = Madlib.find(favorite.madlib_id)%>
     <li> <%=link_to madlib.title, madlib_path(madlib) %> 
-        <%= button_to "Un-Favorite", delete_favorite_path(favorite), method: :delete, params: {id: favorite.madlib_id } %>
+        <%= button_to "Un-Favorite", {action: "destroy", id: favorite.id}, method: :delete %>
     </li>
 <%end%>
 </ul>
