--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,7 +28,7 @@
       <li>#<%= link_to order.number , order_path(order) %></li>
         <ul>
           <% order.trinkets.each do |trinket| %>
-            <li><%= trinket.product_type%> with <%= trinket.madlib.title%> </li>
+            <li><%= trinket.product_type%> <%= "with #{trinket.madlib.title}" unless trinket.favorite.nil?%> </li>
           <%end%>
         </ul>
     
