--- a/app/views/trinkets/index.html.erb
+++ b/app/views/trinkets/index.html.erb
@@ -1,4 +1,4 @@
-shows all trinkets sorted by user
+<h1> 📿 Here Are Your Trinkets, <%=current_user.first_name %>! 📿</h1>
 
 <%# All of the trinkets created* by the user %>
 <div class="d-flex justify-content-around align-items-center flex-wrap">
