--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -128,9 +128,7 @@ h5 {
     font-family: 'Reenie Beanie', cursive;
 }
 
-li {
-    
-}
+
 
 //Buttons
 input[type = "submit"] {
@@ -213,4 +211,8 @@ td.maxi {
     width: 60%;
     text-align: left;
     padding-left: 5px;
+}
+
+th {
+    font-weight: bold;
 }
