--- a/app/views/trinkets/show.html.erb
+++ b/app/views/trinkets/show.html.erb
@@ -2,7 +2,8 @@
 <%# Displays image of type %>
 <%# Displayed madlib text over the image %>
 <%# Displays link to the orders associated with it %>
- <h1>I like the cut of your lib -- Swag</h1>
+ <h1><%= "Nice #{@trinket.product_type}, #{current_user.first_name}" %></h1>
+ <%= link_to "return to your trinkets", user_trinkets_path(current_user) %>
  <div>
 <figure class="img-wrapper figure">
   <%= image_tag "#{@trinket_types[@trinket.product_type][:img_url]}", class: "figure-img #{@trinket.product_type}", alt: "#{@trinket.product_type}" %>
