--- a/app/views/application/splash.html.erb
+++ b/app/views/application/splash.html.erb
@@ -1,1 +1,9 @@
-<h1>HELLO!</h1>
+<div id='splash-title'>
+    <h2 class="white"> WELCOME TO THE</h2>
+    <h1 class= "white"> LIBRARY OF MADDNESS</h1>
+    <br><br>
+    <h3 class="white"> <%= link_to "Descend Into Maddness", new_madlib_path %></h3>
+</div>
+
+<div class='splash'>
+</div>
