--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -221,3 +221,30 @@ td.maxi {
 th {
     font-weight: bold;
 }
+
+
+div.splash {
+    padding-left: -25px;
+    padding-right: -25px;
+    margin-left: -500px;
+    margin-right: -25px;
+    margin-top: -100px;
+
+    background-image: url('library.jpg');
+    width: 200%;
+    height: 900px;
+}
+
+div#splash-title{
+    position: absolute;
+    z-index: 1;
+    top: 200px;
+    left: 400px;
+    
+}
+
+
+
+.white {
+    color: white;
+}
