--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,7 +73,8 @@ main{
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color: $powder;
+    //background-color: $powder;
+    background-image: url('library.jpg'); 
     align-content: center;
     
     min-height: 100vh;
@@ -90,6 +91,7 @@ main>* {
     padding-right: 25px;
     padding-top: 15px;
     text-align: center;
+    
 }
 
 .login_form {
@@ -147,13 +149,25 @@ input[type = "submit"].hover {
     
 }
 
+// FORMS
+label{
+    // display: inline-block;
+    font-family: 'Schoolbell', cursive;
+    //clear: left;
+    // width: 250px;
+    text-align: right;
+    // display: table-cell; 
+}
 input {
     font-family: 'Schoolbell', cursive;
-}
-label {
-    font-family: 'Schoolbell', cursive;
+    // display: inline-block;
+    // display: table-cell;
+    text-align: left;
+
+  
 }
 
+// LINKS
 a {
     font-family: 'Schoolbell', cursive;
     color: $pearlaqua;
@@ -175,7 +189,7 @@ a:active {
 }
 
 
-
+// JUST FONTS
 span {
     font-family: 'Schoolbell', cursive;
 }
@@ -194,17 +208,9 @@ table {
     width: 50%;
     font-family: 'Schoolbell', cursive;
     margin: 0 auto; 
+   
 }
 
-
-// tr {
-//     max-width:100%;
-//     white-space:nowrap;
-// }
-// td {
-//     max-width:100%;
-//     white-space:nowrap;
-// }
 
 td.mini {
     width: 40%;
@@ -242,8 +248,6 @@ div#splash-title{
     left: 400px;
     
 }
-
-
 
 .white {
     color: white;
