--- a/app/views/madlibs/new.html.erb
+++ b/app/views/madlibs/new.html.erb
@@ -1,17 +1,19 @@
 <h1>Create A Madlib!</h1>
 
-
-<h2> <%=@title%> </h2>
+<hr class="body">
+<h3><%=@title%></h3>
 
 <%= form_tag(madlibs_path) do%>
     
     <%= hidden_field_tag :template_index, @index%>
-
+    <table>
     <% @blanks.each do |blank| %>
-        <%= label_tag 'pos', blank %>
-        <%= text_field_tag 'blanks[]' %>
-        <br>
+        <tr>
+            <td class="mini"><%= label_tag 'pos', blank %></td>
+            <td class="maxi"><%= text_field_tag 'blanks[]' %></td>
+        </tr>
     <%end%>
+    </table>
     <br>
     <%= submit_tag "Generate Madlib!"%>
 <%end%>
