--- a/app/views/application/splash.html.erb
+++ b/app/views/application/splash.html.erb
@@ -1,8 +1,8 @@
 <div id='splash-title'>
     <h2 class="white"> WELCOME TO THE</h2>
-    <h1 class= "white"> LIBRARY OF MADDNESS</h1>
+    <h1 class= "white"> LIBRARY OF MADNESS</h1>
     <br><br>
-    <h3 class="white"> <%= link_to "Descend Into Maddness", new_madlib_path %></h3>
+    <h3 class="white"> <%= link_to "Descend Into Madness", new_madlib_path %></h3>
 </div>
 
 <div class='splash'>
