--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,13 +1,13 @@
 <h1>  Your Favorites! </h1>
-
+<hr class= "body">
 
 <%= @favorites.empty? ? (link_to "Start making some madlibs you'll love!", new_madlib_path) : nil %>
                    
 <table>
 <% @favorites.each_with_index do |favorite, index|%>
     <tr>
-        <td> <%=link_to @madlibs[index].title, madlib_path(@madlibs[index]) %> </td> 
-        <td> <%= button_to "Un-Favorite", {action: "destroy", id: favorite.id}, method: :delete %> </td>
+        <td class="left"> <%=link_to @madlibs[index].title, madlib_path(@madlibs[index]) %> </td> 
+        <td class="right"> <%= button_to "Un-Favorite", {action: "destroy", id: favorite.id}, method: :delete %> </td>
     <tr>
  
 <%end%>
